--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "dependencies": {
-    "react-router-dom": "^6.22.2"
+    "amqplib": "^0.10.3",
+    "axios": "^1.6.7",
+    "core-js": "^3.36.0",
+    "react-router-dom": "^6.22.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "tailwind": "^4.0.0"
