--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "tailwind": "^4.0.0"
+    "tailwind": "^4.0.0",
+    "tailwindcss": "^3.4.1"
   }
 }
