--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
     "amqplib": "^0.10.3",
+    "autoprefixer": "^10.4.18",
     "axios": "^1.6.7",
     "core-js": "^3.36.0",
+    "postcss": "^8.4.35",
     "react-router-dom": "^6.22.2",
     "uuid": "^9.0.1"
   },
