--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "autoprefixer": "^10.4.18",
     "axios": "^1.6.7",
     "core-js": "^3.36.0",
+    "express": "^4.18.3",
     "postcss": "^8.4.35",
     "react-router-dom": "^6.22.2",
     "uuid": "^9.0.1"
