--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "webpack": "^5.90.3",
+    "webpack-cli": "^5.1.4"
   }
 }
