--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "dependencies": {
     "amqplib": "^0.10.3",
-    "autoprefixer": "^10.4.18",
     "axios": "^1.6.7",
     "core-js": "^3.36.0",
     "express": "^4.18.3",
@@ -10,8 +9,18 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "autoprefixer": "^9.8.6",
+    "postcss-cli": "^11.0.0",
     "tailwindcss": "^3.4.1",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4"
+  },
+  "scripts": {
+    "start": "npm run watch:css && react-scripts start",
+    "build": "npm run watch:css && react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "watch:css": "postcss src/assets/tailwind.css -o src/assets/main.css"
+
   }
 }
