--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build": "npm run watch:css && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "watch:css": "postcss src/assets/tailwind.css -o src/assets/main.css"
+    "watch:css": "postcss poke/src/assets/tailwind.css -o poke/src/assets/main.css"
 
   }
 }
